--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+src/main/resources/application.properties
+src/main/java/com/zup/uploads/**
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
-src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
